<resources>
    <string name="app_name">XeroxApp</string>
    <string name="signin">Sign In</string>
    <string name="User">Username</string>
    <string name="password">Password</string>
    <string name="Mobile">Mobile No.</string>
    <string name="email">Email id</string>
    <string name="address">Address</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="submit">Submit</string>
    <string name="wrong_pass">Password doesn\'t match</string>
    <string name="register">Register</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="upload">Upload</string>
    <string name="status">Status</string>
    <string name="transactions">Transactions</string>
    <string name="title_activity_dashboard_page">Dashboard_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="Upload">Upload</string>
    <string name="Payment">Payment</string>
    <string name="Profile">Profile</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

</resources>
