<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_page"
    android:background="@drawable/backg">

    <View
        android:id="@+id/register_bgcard"
        android:layout_width="326dp"
        android:layout_height="568dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.9"
        android:background="@drawable/mainpagebackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_round"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="13dp"
        android:textAlignment="textStart"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@id/register_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_email"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_round"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="13dp"
        android:textAlignment="textStart"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@+id/register_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_mobile_no"
        app:layout_constraintVertical_bias="0.212" />

    <EditText
        android:id="@+id/register_username"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:autoLink="email"
        android:background="@drawable/edittext_round"
        android:drawableStart="@drawable/ic_account_circle_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/User"
        android:inputType="textPersonName"
        android:paddingLeft="13dp"
        android:textAlignment="textStart"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@id/register_mobile_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/register_bgcard"
        app:layout_constraintVertical_bias="0.071" />

    <EditText
        android:id="@+id/register_mobile_no"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edittext_round"
        android:drawableStart="@drawable/ic_phone2"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/Mobile"
        android:inputType="phone"
        android:paddingLeft="13dp"
        android:textAlignment="textStart"
        android:textColor="#03A9F4"
        android:textColorHint="#03A9F4"
        app:layout_constraintBottom_toTopOf="@id/register_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_username"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/register_submit"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:height="45dp"
        android:background="@drawable/buttonshape"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/register_signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/register_signin"
        android:layout_width="103dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:onClick="gotoLogin"
        android:text="@string/signin"
        android:textColor="#FCF5F5"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/register_bgcard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_submit"
        app:layout_constraintVertical_bias="0.327" />

</androidx.constraintlayout.widget.ConstraintLayout>